# quantitative_finance_academic_research

./: README.md
001_Portfolio_Management/001-Markowitz-Portfolio_Selction-1952/code/cpp_23/markowitz/: CMakeLists.txt
001_Portfolio_Management/001-Markowitz-Portfolio_Selction-1952/code/functional/cpp_23/: CMakeLists.txt  README.md
001_Portfolio_Management/001-Markowitz-Portfolio_Selction-1952/code/functional/cpp_26/: CMakeLists.txt  README.md
001_Portfolio_Management/001-Markowitz-Portfolio_Selction-1952/code/functional/python_3_11/: pyproject.toml
001_Portfolio_Management/001-Markowitz-Portfolio_Selction-1952/code/functional/python_3_11/src/: functional.py
001_Portfolio_Management/001-Markowitz-Portfolio_Selction-1952/code/functional/rust_1_84_0/: Cargo.toml  README.md
001_Portfolio_Management/001-Markowitz-Portfolio_Selction-1952/code/object_oriented/cpp_23/: README.md
001_Portfolio_Management/001-Markowitz-Portfolio_Selction-1952/code/object_oriented/cpp_26/: README.md
001_Portfolio_Management/001-Markowitz-Portfolio_Selction-1952/code/object_oriented/python_3_11/: README.md
001_Portfolio_Management/001-Markowitz-Portfolio_Selction-1952/code/object_oriented/rust_1_84_0/: README.md
001_Portfolio_Management/001-Markowitz-Portfolio_Selction-1952/code/python_3_11/markowitz/: pyproject.toml
001_Portfolio_Management/001-Markowitz-Portfolio_Selction-1952/code/python_3_11/markowitz/src/: main.py
001_Portfolio_Management/001-Markowitz-Portfolio_Selction-1952/code/python_3_11/markowitz/src/markowitz/: functional.py  optimizer.py
001_Portfolio_Management/001-Markowitz-Portfolio_Selction-1952/summary/: README.md
001_Portfolio_Management/001-Markowitz-Portfolio_Selection-1952/code/functional/cpp_23/: CMakeLists.txt
001_Portfolio_Management/001-Markowitz-Portfolio_Selection-1952/code/functional/python_3_11/: README.md
001_Portfolio_Management/001-Markowitz-Portfolio_Selection-1952/code/object_oriented/cpp_23/: CMakeLists.txt
001_Portfolio_Management/001-Markowitz-Portfolio_Selection-1952/code/object_oriented/cpp_26/: CMakeLists.txt
001_Portfolio_Management/001-Markowitz-Portfolio_Selection-1952/code/object_oriented/cpp_26/module/: markowitz.ixx
001_Portfolio_Management/001-Markowitz-Portfolio_Selection-1952/code/object_oriented/cpp_26/src/: main.cpp
001_Portfolio_Management/001-Markowitz-Portfolio_Selection-1952/layman_explanation/: README.md
001_Portfolio_Management/001-Markowitz-Portfolio_Selection-1952/summary/: README.md
001_Portfolio_Management/002-Fama_French-Common_Risk_Factors-1993/code/functional/cpp_23/: CMakeLists.txt  README.md
001_Portfolio_Management/002-Fama_French-Common_Risk_Factors-1993/code/functional/cpp_23/src/: main.cpp
001_Portfolio_Management/002-Fama_French-Common_Risk_Factors-1993/code/functional/cpp_26/: CMakeLists.txt  README.md
001_Portfolio_Management/002-Fama_French-Common_Risk_Factors-1993/code/functional/python_3_11/: README.md  pyproject.toml
001_Portfolio_Management/002-Fama_French-Common_Risk_Factors-1993/code/functional/python_3_11/src/: functional.py
001_Portfolio_Management/002-Fama_French-Common_Risk_Factors-1993/code/functional/rust_1_84_0/: README.md
001_Portfolio_Management/002-Fama_French-Common_Risk_Factors-1993/code/object_oriented/cpp_23/: CMakeLists.txt  README.md
001_Portfolio_Management/002-Fama_French-Common_Risk_Factors-1993/layman_explanation/: README.md
001_Portfolio_Management/002-Fama_French-Common_Risk_Factors-1993/summary/: README.md
001_Portfolio_Management/003_Ang_Hodrick_Xing_Zhang-Cross_Section_of_Vol_and_ER-2006/code/functional/cpp_26/: CMakeLists.txt  README.md
001_Portfolio_Management/003_Ang_Hodrick_Xing_Zhang-Cross_Section_of_Vol_and_ER-2006/code/functional/cpp_26/src/: volatility_sorting_fp.cpp
001_Portfolio_Management/003_Ang_Hodrick_Xing_Zhang-Cross_Section_of_Vol_and_ER-2006/code/object_oriented/python_3_11/: README.md  pyproject.toml
001_Portfolio_Management/003_Ang_Hodrick_Xing_Zhang-Cross_Section_of_Vol_and_ER-2006/code/object_oriented/python_3_11/src/: main.py
001_Portfolio_Management/003_Ang_Hodrick_Xing_Zhang-Cross_Section_of_Vol_and_ER-2006/code/object_oriented/python_3_11/src/volatility_sorting/: sorter.py
001_Portfolio_Management/003_Ang_Hodrick_Xing_Zhang-Cross_Section_of_Vol_and_ER-2006/layman_explanation/: README.md
001_Portfolio_Management/003_Ang_Hodrick_Xing_Zhang-Cross_Section_of_Vol_and_ER-2006/summary/: README.md
001_Portfolio_Management/004_Lopez_de_Prado_M-Hierarchical_Risk_Parity-2023/code/functional/python_3_11/: README.md  pyproject.toml
001_Portfolio_Management/004_Lopez_de_Prado_M-Hierarchical_Risk_Parity-2023/code/functional/python_3_11/src/: functional.py
001_Portfolio_Management/004_Lopez_de_Prado_M-Hierarchical_Risk_Parity-2023/code/object_oriented/python_3_11/: README.md  pyproject.toml
001_Portfolio_Management/004_Lopez_de_Prado_M-Hierarchical_Risk_Parity-2023/code/object_oriented/python_3_11/src/: main.py
001_Portfolio_Management/004_Lopez_de_Prado_M-Hierarchical_Risk_Parity-2023/code/object_oriented/python_3_11/src/hrp/: optimizer.py
001_Portfolio_Management/004_Lopez_de_Prado_M-Hierarchical_Risk_Parity-2023/layman_explanation/: README.md
001_Portfolio_Management/004_Lopez_de_Prado_M-Hierarchical_Risk_Parity-2023/summary/: README.md
002_Systematic_Trading/001-Jagadeesh_Titman-Returns_to_Buying_Winner_and_Selling_Losers-1993/summary/: README.md
002_Systematic_Trading/002-Chan_Jegadeesh_Lakonishok-Momentum_Strategies-1996/code/functional/python_3_11/: README.md  pyproject.toml
002_Systematic_Trading/002-Chan_Jegadeesh_Lakonishok-Momentum_Strategies-1996/code/functional/python_3_11/src/: momentum_calculator.py
002_Systematic_Trading/002-Chan_Jegadeesh_Lakonishok-Momentum_Strategies-1996/summary/: README.md
002_Systematic_Trading/003-Harvey_Liu_Zhu-and_the_Cross_Section_of_Expected_Returns-2016/summary/: README.md
002_Systematic_Trading/004-Gu_Kelly_Xiu-Deep_Learning_for_Asset_Pricing_and_Trading-2025/summary/: README.md
(+118 files in other folders)
