[tool.poetry]
name = "markowitz"
version = "0.1.0"
description = "Markowitz Portfolio Optimization"
authors = ["Your Name "]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
scipy = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"