[tool.poetry]
name = "hrp"
version = "0.1.0"
description = "Hierarchical Risk Parity"
authors = ["Shaikat Majumdar <sm2774u@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
scipy = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
