[tool.poetry]
name = "momentum_calculator"
version = "0.1.0"
description = "Momentum Calculator Implementation"
authors = ["Shaikat Majumdar <sm2774u@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
